[package]
name = "wgpu-09-models"
version = "0.1.0"
authors = ["Carlos Neto <https://github.com/carlosvneto>"]
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "4.0", features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "wgpu-09-models"
path = "src/main.rs"